# document-copilot

./: README.md  README_architecture.md  README_setup.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: chat.py
backend/app/assistant/: __init__.py  agent.py  deps.py  instructions.md  outputs.py
backend/app/auth/: dependencies.py
backend/app/chat/: messages.py  orchestrator.py  streaming.py
backend/app/database/: chats.py  models.py  session.py
backend/app/grounding/: validator.py
backend/app/ingestion/: __main__.py  chunker.py  embedder.py  html_to_markdown.py  pipeline.py  writer.py
backend/app/retrieval/: fusion.py  queries.py  retriever.py
backend/app/schemas/: chat.py
backend/tests/: conftest.py  test_config.py
backend/tests/api/: test_chat.py
backend/tests/assistant/: __init__.py  test_agent.py  test_outputs.py
backend/tests/auth/: test_dependencies.py
backend/tests/chat/: test_orchestrator.py  test_streaming.py
backend/tests/database/: test_chats.py  test_models.py
backend/tests/grounding/: test_validator.py
backend/tests/ingestion/: test_chunker.py  test_embedder.py  test_html_to_markdown.py  test_pipeline.py  test_writer.py
backend/tests/retrieval/: test_fusion.py  test_queries.py  test_retriever.py
docs/superpowers/plans/: 2026-06-23-auth-wiring.md  2026-06-23-backend-skeleton-db-schema.md  (+3 more)
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx
(+10 files in other folders)
