[project]
name = "document-copilot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.137.1",
    "httpx==0.28.1",
    "openai==2.41.1",
    "pgvector==0.4.2",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pydantic-ai==1.107.0",
    "pydantic-settings==2.14.1",
    "sqlalchemy==2.0.51",
    "structlog==26.1.0",
    "supabase==2.31.0",
    "uvicorn==0.49.0",
]

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
